MA-21 Refactor API documentation and update dependencies; remove unused Swagger components
